<resources>
    <string name="app_name">Cook Book</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="Edit_post">Edit Post</string>
    <string name="email">Email</string>
    <string name="display_name">Name</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="change_username">Change Username</string>
    <string name="new_pass">New Password</string>
    <string name="new_username">New Username</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="new_post">New Post</string>
    <string name="done">Done</string>
    <string name="upload_image">Change Image</string>
    <string name="hint_title">Title</string>
    <string name="hint_recipe">Recipe</string>
    <!--Facebook-->
    <string name="facebook_app_id">190781848160248</string>
    <string name="fb_login_protocol_scheme">fb190781848160248</string>

    <!--Post detail-->
    <string name="commentHolder">Enter your comment here...</string>

</resources>
