<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group32.android.cookbook.NewPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editpost_toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editpost_btn_done"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="18dp"
            android:text="@string/new_post"
            android:textColor="@color/color_backgroud"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/editpost_btn_done"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editpost_toolbar3"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="11dp"
        android:background="@color/colorPrimary"
        android:text="@string/done" />

    <ImageView
        android:id="@+id/editpost_iv_uploaded_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editpost_btn_done"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/editpost_btn_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editpost_btn_done"
        android:layout_below="@+id/editpost_iv_uploaded_photo"
        android:layout_marginTop="9dp"
        android:background="@color/colorPrimary"
        android:text="@string/upload_image" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_text"
        android:layout_below="@+id/editpost_btn_change"
        android:id="@+id/editpost_hint_title"
        >
        <EditText
            android:id="@+id/editpost_edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editpost_btn_upload"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_title"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_text"
        android:layout_below="@+id/editpost_hint_title">

        <EditText
            android:id="@+id/editpost_edt_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editpost_edt_title"
            android:layout_below="@+id/editpost_edt_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Recipe"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
