<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="group32.android.cookbook.NewPostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_done"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="18dp"
            android:text="@string/new_post"
            android:textColor="@color/color_backgroud"
            android:textSize="20sp"/>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btn_done"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toolbar3"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/done"
        android:textColor="@color/hungry" />

    <ImageView
        android:id="@+id/iv_uploaded_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_done"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btn_upload_image"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/hungry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_uploaded_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:text="@string/upload_image" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_text"
        android:layout_below="@+id/btn_upload_image"
        android:id="@+id/hint_title"
        >
        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_upload_image"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/hint_title"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/color_text"
        android:layout_below="@+id/hint_title">

        <EditText
            android:id="@+id/edt_recipe"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_alignStart="@+id/edt_title"
            android:layout_below="@+id/edt_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Recipe"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="10"
            android:minLines="6" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
